syntax = "proto3";
import "Role.proto";
//protoc --proto_path=src\main\java\com\game\protobuf --java_out=src\main\java src\main\java\com\game\protobuf\MsgRoleInfo.proto

option java_package = "com.game.protobuf.protoc";
option java_outer_classname = "MsgMapInfoProto";

enum RequestType{
    GETMAP = 0;     //获取所在位置
    MOVE = 1;       //移动
}

message RequestMapInfo{
    string requestId = 1;       // 请求id
    int64 userId = 2;           // 请求的uid
    string dest = 3;            //目的地
    RequestType type = 4;      // 请求类型
}

message ResponseMapInfo{
    int32 result = 1;           // 返回结果
    int64 userId = 2;           // 返回的uid
    string content = 3;         // 返回内容

    RequestType type = 4;       // 返回类型

    Role role = 5;          // 用户角色
}